# hangman

./: README.md  check.txt  hangman.cabal
src/: Hangman.hs
test/: Spec.hs
