name:                hangman
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
authors:             Nathan Lander
                   , Julie Moronuki
                   , Christopher Allen
maintainer:          https://github.com/nlander
copyright:           BSD3
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hangman
  build-depends:       base >= 4.7 && < 5
                     , random == 1.1
                     , split == 0.2.2
  default-language:    Haskell2010

executable hangman-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hangman
  default-language:    Haskell2010

test-suite hangman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hangman
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nlander/hangman
